# LIC-Vector-field-visualisation

learnOpenGL/: CMakeLists.txt  README.md
learnOpenGL/src/: main.cpp
learnOpenGL/src/bezier/: BezierCurve.h  BezierSurface.cpp  BezierSurface.h
learnOpenGL/src/librairies/: glad.c
learnOpenGL/src/shaders/: glyphe.gs  glyphe.vs  lamp.fs  lamp.vs  lighting.fs  lighting.vs  shader.fs  shader.vs  shaderAxes.fs  shaderAxes.vs  shaderBezierCurve.fs  shaderLIC.fs
learnOpenGL/src/utilitaires/: Axes.cpp  Axes.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  FaceBasedVectorField.cpp  FaceBasedVectorField.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  Structures.h  Texture.h  meshLic.cpp  meshLic.h
